--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p class="lead">
       <a href="https://blackext.github.io/" class="btn btn-outline btn-lg">Перейти на сайт</a>
     </p>
-    <img class="img-responsive" src="bs-themes.png" alt="Bootstrap Themes" width="1024" height="388">
+    <img class="img-responsive" src="bs-themes.png" alt="Black Internet" width="1024" height="388">
   </div>
 </div>
 <div class="bs-docs-featurette">
@@ -36,7 +36,7 @@
     <p class="lead">
       <a href="https://blackext.github.io/" class="btn btn-outline btn-lg">Перейти на сайт</a>
     </p>
-    <img class="img-responsive" src="bs-themes.png" alt="Bootstrap Themes" width="1024" height="388">
+    <img class="img-responsive" src="bs-themes.png" alt="ExDesk" width="1024" height="388">
   </div>
 </div>
 <div class="bs-docs-featurette">
@@ -46,7 +46,7 @@
     <p class="lead">
       <a href="https://blackext.github.io/" class="btn btn-outline btn-lg">Перейти на сайт</a>
     </p>
-    <img class="img-responsive" src="bs-themes.png" alt="Bootstrap Themes" width="1024" height="388">
+    <img class="img-responsive" src="bs-themes.png" alt="BlackThemes" width="1024" height="388">
   </div>
 </div>
 <div class="bs-docs-featurette">
@@ -56,7 +56,7 @@
     <p class="lead">
       <a href="https://blackext.github.io/" class="btn btn-outline btn-lg">Перейти на сайт</a>
     </p>
-    <img class="img-responsive" src="bs-themes.png" alt="Bootstrap Themes" width="1024" height="388">
+    <img class="img-responsive" src="bs-themes.png" alt="AIMPBlack" width="1024" height="388">
   </div>
 </div>
 <div class="bs-docs-featurette">
@@ -66,7 +66,7 @@
     <p class="lead">
       <a href="https://blackext.github.io/" class="btn btn-outline btn-lg">Перейти на сайт</a>
     </p>
-    <img class="img-responsive" src="bs-themes.png" alt="Bootstrap Themes" width="1024" height="388">
+    <img class="img-responsive" src="bs-themes.png" alt="Black!osu" width="1024" height="388">
   </div>
 </div>
 </html>
