--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Я ExeWire - Web-frontend разработчик, изучаю Python, планирую изучить C#. Здесь вы увидите все мои проекты, над которыми я в данный момент работаю постоянно.">
 <meta name="author" content="ExeWire">
-<title>ExeWire Dev</title>
+<title>ExeWire Developer</title>
 <link href="style.css" rel="stylesheet">
 <link rel="apple-touch-icon" href="https://getbootstrap.com/docs/3.4/apple-touch-icon.png">
 <link rel="icon" href="https://getbootstrap.com/docs/3.4/favicon.ico">
@@ -15,7 +15,7 @@
     <main class="bs-docs-masthead" id="content" tabindex="-1">
 <div class="container">
     <p class="lead">Добро пожаловать!</p>
-    <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline">Ex</span>
+    <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"><img class="img-responsive" src="exewire.png" alt="ExeWire Logo"></span>
     <p class="lead">Я ExeWire - Web-frontend разработчик, изучаю Python, планирую изучить C#. Здесь вы увидите все мои проекты, над которыми я в данный момент работаю постоянно.</p>
 </div>
 </main>
