--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main class="bs-docs-masthead" id="content" tabindex="-1">
 <div class="container">
     <p class="lead">Добро пожаловать!</p>
-    <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"><img class="img-responsive" src="exewire.png" alt="ExeWire Logo"></span>
+    <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"><img class="img-responsive" src="img/exewire.png" alt="ExeWire Logo"></span>
     <p class="lead">Я ExeWire - Web-frontend разработчик, изучаю Python, планирую изучить C#. Здесь вы увидите все мои проекты, над которыми я в данный момент работаю постоянно.</p>
 </div>
 </main>
