--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <meta name="author" content="ExeWire">
 <title>ExeWire Developer</title>
 <link href="style.css" rel="stylesheet">
-<link rel="apple-touch-icon" href="https://getbootstrap.com/docs/3.4/apple-touch-icon.png">
-<link rel="icon" href="https://getbootstrap.com/docs/3.4/favicon.ico">
+<link rel="icon" href="img/exewire.png" type="image/png">
 </head>
   <body class="bs-docs-home">
     <main class="bs-docs-masthead" id="content" tabindex="-1">
