--- a/index.html
+++ b/index.html
@@ -1,71 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Я ExeWire - Web-frontend разработчик, изучаю Python, планирую изучить C#. Здесь вы увидите все мои проекты, над которыми я в данный момент работаю постоянно.">
-<meta name="author" content="ExeWire">
-<title>ExeWire Developer</title>
-<link href="style.css" rel="stylesheet">
-<link rel="icon" href="img/exewire.png" type="image/png">
+	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+	<meta content="IE=edge" http-equiv="X-UA-Compatible">
+	<meta content="width=device-width, initial-scale=1" name="viewport">
+	<meta content="Я ExeWire - Web-frontend разработчик, изучаю Python, планирую изучить C#. Здесь вы увидите все мои проекты, над которыми я в данный момент работаю постоянно." name="description">
+	<meta content="ExeWire" name="author">
+	<title>ExeWire Developer</title>
+	<link href="style.css" rel="stylesheet">
+	<link href="img/exewire.png" rel="icon" type="image/png">
 </head>
-  <body class="bs-docs-home">
-    <main class="bs-docs-masthead" id="content" tabindex="-1">
-<div class="container">
-    <p class="lead">Добро пожаловать!</p>
-    <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"><img class="img-responsive" src="img/exewire.png" alt="ExeWire Logo"></span>
-    <p class="lead">Я ExeWire - Web-frontend разработчик, изучаю Python, планирую изучить C#. Здесь вы увидите все мои проекты, над которыми я в данный момент работаю постоянно.</p>
-</div>
-</main>
-<div class="bs-docs-featurette">
-  <div class="container">
-    <h2 class="bs-docs-featurette-title">Браузерное расширение "Чёрный Интернет"</h2>
-    <p class="lead">Уже год, как я разрабатываю экспериментальное расширение, которое перекрашивает все популярно-кликабельные сайты в полностью чёрный цвет, позволяя с максимальным комфортом посещать сайты в ночное время суток! Из-за того, что внутри расширения располагаются другие 15 расширений, я не могу выложить его в WebStore из-за всяческих лицензионных соглашений - я просто соединил все мелкие расширение во едино для экономии.</p>
-    <p class="lead">
-      <a href="https://blackext.github.io/" class="btn btn-outline btn-lg">Перейти на сайт</a>
-    </p>
-    <img class="img-responsive" src="bs-themes.png" alt="Black Internet" width="1024" height="388">
-  </div>
-</div>
-<div class="bs-docs-featurette">
-  <div class="container">
-    <h2 class="bs-docs-featurette-title">Electron-приложение "ExDesk"</h2>
-    <p class="lead">Я мечтал написать свою пародию на операционную систему и моя мечта осуществилась - после изучения HTML, CSS, JS и моему знакомству с Electron, я написал приложение, которое внешне напоминает систему! Да-да, я знаю, что никому не нравится Electron, ибо это "урезанный Chrome", но есть ли другой вариант? Пока аналогов нет или пока я не изучу что-то подходящее, увы, будет так.</p>
-    <p class="lead">
-      <a href="https://blackext.github.io/" class="btn btn-outline btn-lg">Перейти на сайт</a>
-    </p>
-    <img class="img-responsive" src="bs-themes.png" alt="ExDesk" width="1024" height="388">
-  </div>
-</div>
-<div class="bs-docs-featurette">
-  <div class="container">
-    <h2 class="bs-docs-featurette-title">Чёрные темы для Win-приложений</h2>
-    <p class="lead">Discord, Telegram, VimeWorld, Prime World - и это не предел! Я крашу в чёрный всё, что кажется мне уместным, чтобы его покрасили в чёрный!</p>
-    <p class="lead">
-      <a href="https://blackext.github.io/" class="btn btn-outline btn-lg">Перейти на сайт</a>
-    </p>
-    <img class="img-responsive" src="bs-themes.png" alt="BlackThemes" width="1024" height="388">
-  </div>
-</div>
-<div class="bs-docs-featurette">
-  <div class="container">
-    <h2 class="bs-docs-featurette-title">Чёрный скин для AIMP "AIMPBlack"</h2>
-    <p class="lead">На данный проект ушло три месяца изучения всех нюансов в скин-движке и всё делалось чисто ради эксперимента. А скин получился довольно хорошим.</p>
-    <p class="lead">
-      <a href="https://blackext.github.io/" class="btn btn-outline btn-lg">Перейти на сайт</a>
-    </p>
-    <img class="img-responsive" src="bs-themes.png" alt="AIMPBlack" width="1024" height="388">
-  </div>
-</div>
-<div class="bs-docs-featurette">
-  <div class="container">
-    <h2 class="bs-docs-featurette-title">Чёрный скин для игры в клиент osu!fx "Black!osu"</h2>
-    <p class="lead">После знакомства с клиентом популярной игры osu!fx, мне жутко понравилась полная поддержка скинов и я тут же ринулся делать полноценный чёрный скин.</p>
-    <p class="lead">
-      <a href="https://blackext.github.io/" class="btn btn-outline btn-lg">Перейти на сайт</a>
-    </p>
-    <img class="img-responsive" src="bs-themes.png" alt="Black!osu" width="1024" height="388">
-  </div>
-</div>
+<body class="bs-docs-home">
+	<main class="bs-docs-masthead" id="content" tabindex="-1">
+		<div class="container">
+			<p class="lead">Добро пожаловать!</p><span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"><img alt="ExeWire Logo" class="img-responsive" src="img/exewire.png"></span>
+			<p class="lead">Я ExeWire - Web-frontend разработчик, изучаю Python, планирую изучить C#. Здесь вы увидите все мои проекты, над которыми я в данный момент работаю постоянно.</p>
+		</div>
+	</main>
+	<div class="bs-docs-featurette">
+		<div class="container">
+		<h2 class="bs-docs-featurette-title">Браузерное расширение "Чёрный Интернет"</h2>
+		<p class="lead">Уже год, как я разрабатываю экспериментальное расширение, которое перекрашивает все популярно-кликабельные сайты в полностью чёрный цвет, позволяя с максимальным комфортом посещать сайты в ночное время суток! Из-за того, что внутри расширения располагаются другие 15 расширений, я не могу выложить его в WebStore из-за всяческих лицензионных соглашений - я просто соединил все мелкие расширение во едино для экономии.</p>
+		<p class="lead"><a class="btn btn-outline btn-lg" href="https://blackext.github.io/">Перейти на сайт</a></p><img alt="Black Internet" class="img-responsive" height="388" src="bs-themes.png" width="1024"></div>
+	</div>
+	<div class="bs-docs-featurette">
+		<div class="container">
+		<h2 class="bs-docs-featurette-title">Electron-приложение "ExDesk"</h2>
+		<p class="lead">Я мечтал написать свою пародию на операционную систему и моя мечта осуществилась - после изучения HTML, CSS, JS и моему знакомству с Electron, я написал приложение, которое внешне напоминает систему! Да-да, я знаю, что никому не нравится Electron, ибо это "урезанный Chrome", но есть ли другой вариант? Пока аналогов нет или пока я не изучу что-то подходящее, увы, будет так.</p>
+		<p class="lead"><a class="btn btn-outline btn-lg" href="https://blackext.github.io/">Перейти на сайт</a></p><img alt="ExDesk" class="img-responsive" height="388" src="bs-themes.png" width="1024"></div>
+	</div>
+	<div class="bs-docs-featurette">
+		<div class="container">
+		<h2 class="bs-docs-featurette-title">Чёрные темы для Win-приложений</h2>
+		<p class="lead">Discord, Telegram, VimeWorld, Prime World - и это не предел! Я крашу в чёрный всё, что кажется мне уместным, чтобы его покрасили в чёрный!</p>
+		<p class="lead"><a class="btn btn-outline btn-lg" href="https://blackext.github.io/">Перейти на сайт</a></p><img alt="BlackThemes" class="img-responsive" height="388" src="bs-themes.png" width="1024"></div>
+	</div>
+	<div class="bs-docs-featurette">
+		<div class="container">
+		<h2 class="bs-docs-featurette-title">Чёрный скин для AIMP "AIMPBlack"</h2>
+		<p class="lead">На данный проект ушло три месяца изучения всех нюансов в скин-движке и всё делалось чисто ради эксперимента. А скин получился довольно хорошим.</p>
+		<p class="lead"><a class="btn btn-outline btn-lg" href="https://blackext.github.io/">Перейти на сайт</a></p><img alt="AIMPBlack" class="img-responsive" height="388" src="bs-themes.png" width="1024"></div>
+	</div>
+	<div class="bs-docs-featurette">
+		<div class="container">
+		<h2 class="bs-docs-featurette-title">Чёрный скин для игры в клиент osu!fx "Black!osu"</h2>
+		<p class="lead">После знакомства с клиентом популярной игры osu!fx, мне жутко понравилась полная поддержка скинов и я тут же ринулся делать полноценный чёрный скин.</p>
+		<p class="lead"><a class="btn btn-outline btn-lg" href="https://blackext.github.io/">Перейти на сайт</a></p><img alt="Black!osu" class="img-responsive" height="388" src="bs-themes.png" width="1024"></div>
+	</div>
+</body>
 </html>
