--- a/index.html
+++ b/index.html
@@ -14,38 +14,39 @@
 	<main class="bs-docs-masthead" id="content" tabindex="-1">
 		<div class="container">
 			<p class="lead">Добро пожаловать!</p><span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"><img alt="ExeWire Logo" class="img-responsive" src="img/exewire.png"></span>
-			<p class="lead">Я ExeWire - Web-frontend разработчик, изучаю Python, планирую изучить C#. Здесь вы увидите все мои проекты, над которыми я в данный момент работаю постоянно.</p>
+			<p class="lead">My name is ExeWire.</p>
+			<p class="lead">Web-frontend разработчик, изучаю Python, планирую изучить C#. Здесь вы увидите все мои проекты, над которыми я в данный момент работаю постоянно.</p>
 		</div>
 	</main>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Браузерное расширение "Чёрный Интернет"</h2>
 		<p class="lead">Уже год, как я разрабатываю экспериментальное расширение, которое перекрашивает все популярно-кликабельные сайты в полностью чёрный цвет, позволяя с максимальным комфортом посещать сайты в ночное время суток! Из-за того, что внутри расширения располагаются другие 15 расширений, я не могу выложить его в WebStore из-за всяческих лицензионных соглашений - я просто соединил все мелкие расширение во едино для экономии.</p>
-		<p class="lead"><a class="btn btn-outline btn-lg" href="https://blackext.github.io/">Перейти на сайт</a></p><img alt="Black Internet" class="img-responsive" height="388" src="bs-themes.png" width="1024"></div>
+		<p class="lead"><a class="btn btn-outline btn-lg" href="/blackext">Перейти на сайт</a></p><img alt="Black Internet" class="img-responsive" height="388" src="bs-themes.png" width="1024"></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Electron-приложение "ExDesk"</h2>
 		<p class="lead">Я мечтал написать свою пародию на операционную систему и моя мечта осуществилась - после изучения HTML, CSS, JS и моему знакомству с Electron, я написал приложение, которое внешне напоминает систему! Да-да, я знаю, что никому не нравится Electron, ибо это "урезанный Chrome", но есть ли другой вариант? Пока аналогов нет или пока я не изучу что-то подходящее, увы, будет так.</p>
-		<p class="lead"><a class="btn btn-outline btn-lg" href="https://blackext.github.io/">Перейти на сайт</a></p><img alt="ExDesk" class="img-responsive" height="388" src="bs-themes.png" width="1024"></div>
+		<p class="lead"><a class="btn btn-outline btn-lg" href="/exdesk">Перейти на сайт</a></p><img alt="ExDesk" class="img-responsive" height="388" src="bs-themes.png" width="1024"></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрные темы для Win-приложений</h2>
 		<p class="lead">Discord, Telegram, VimeWorld, Prime World - и это не предел! Я крашу в чёрный всё, что кажется мне уместным, чтобы его покрасили в чёрный!</p>
-		<p class="lead"><a class="btn btn-outline btn-lg" href="https://blackext.github.io/">Перейти на сайт</a></p><img alt="BlackThemes" class="img-responsive" height="388" src="bs-themes.png" width="1024"></div>
+		<p class="lead"><a class="btn btn-outline btn-lg" href="/blackthemes">Перейти на сайт</a></p><img alt="BlackThemes" class="img-responsive" height="388" src="bs-themes.png" width="1024"></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрный скин для AIMP "AIMPBlack"</h2>
 		<p class="lead">На данный проект ушло три месяца изучения всех нюансов в скин-движке и всё делалось чисто ради эксперимента. А скин получился довольно хорошим.</p>
-		<p class="lead"><a class="btn btn-outline btn-lg" href="https://blackext.github.io/">Перейти на сайт</a></p><img alt="AIMPBlack" class="img-responsive" height="388" src="bs-themes.png" width="1024"></div>
+		<p class="lead"><a class="btn btn-outline btn-lg" href="/aimpblack">Перейти на сайт</a></p><img alt="AIMPBlack" class="img-responsive" height="388" src="bs-themes.png" width="1024"></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрный скин для игры в клиент osu!fx "Black!osu"</h2>
 		<p class="lead">После знакомства с клиентом популярной игры osu!fx, мне жутко понравилась полная поддержка скинов и я тут же ринулся делать полноценный чёрный скин.</p>
-		<p class="lead"><a class="btn btn-outline btn-lg" href="https://blackext.github.io/">Перейти на сайт</a></p><img alt="Black!osu" class="img-responsive" height="388" src="bs-themes.png" width="1024"></div>
+		<p class="lead"><a class="btn btn-outline btn-lg" href="/blackosu">Перейти на сайт</a></p><img alt="Black!osu" class="img-responsive" height="388" src="bs-themes.png" width="1024"></div>
 	</div>
 </body>
 </html>
