--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Браузерное расширение "Чёрный Интернет"</h2>
 		<p class="lead">Уже год, как я разрабатываю экспериментальное расширение, которое перекрашивает все популярно-кликабельные сайты в полностью чёрный цвет, позволяя с максимальным комфортом посещать сайты в ночное время суток! Из-за того, что внутри расширения располагаются другие 15 расширений, я не могу выложить его в WebStore из-за всяческих лицензионных соглашений - я просто соединил все мелкие расширение во едино для экономии.</p>
-		<img alt="Black Internet" class="img-responsive" height="284" src="img/blackext.png" width="254">
+		<img alt="Black Internet" class="img-responsive" style="padding-bottom:20px!important;padding-left:460px!important;" height="284" src="img/blackext.png" width="254">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="/blackext">Перейти на сайт</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
