--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрный скин для AIMP "AIMPBlack"</h2>
 		<p class="lead">На данный проект ушло три месяца изучения всех нюансов в скин-движке и всё делалось чисто ради эксперимента. А скин получился довольно хорошим.</p>
-		<img alt="AIMPBlack" class="img-responsive" height="388" src="img/aimpblack.png" width="1024">
+		<img alt="AIMPBlack" class="img-responsive" height="547" style="padding-bottom:15px!important;padding-left:370px!important;" src="img/aimpblack.png" width="407">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="/aimpblack.acs4">Скачать</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
