--- a/blackext/index.html
+++ b/blackext/index.html
@@ -51,7 +51,7 @@
 					<h3 class="title is-4 is-marginless">Независимость</h3>
 					<p>Расширение не распространяется через магазины Google, Opera и Firefox. Разработка ведётся единственным начинающим разработчиком - веб-программистом ExeWire.</p>
 				</div>
-				<div class="column has-text-centered preview"><img alt="Скриншот" style="width:max-content;height:max-content;min-width:-webkit-fill-available;max-width:-webkit-fill-available;min-width:-moz-fit-content;max-width:-moz-fit-content;" src="https://github.com/blackext/exewire.github.io/blackext/raw/master/img/extension_preview.gif"></div>
+				<div class="column has-text-centered preview"><img alt="Скриншот" style="width:max-content;height:max-content;min-width:-webkit-fill-available;max-width:-webkit-fill-available;min-width:-moz-fit-content;max-width:-moz-fit-content;" src="https://exewire.github.io/blackext/img/extension_preview.gif"></div>
 				<div class="column has-text-left has-text-centered-mobile">
 					<h3 class="title is-4 is-marginless">Лёгкость кода</h3>
 					<p>Код расширения постоянно обновляется и улучшается, чтобы расширение оставалось лёгким и работоспособным. В случае падения или устаревания стиля сайта, он будет удалён.</p>
