--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Браузерное расширение "Чёрный Интернет"</h2>
 		<p class="lead">Уже год, как я разрабатываю экспериментальное расширение, которое перекрашивает все популярно-кликабельные сайты в полностью чёрный цвет, позволяя с максимальным комфортом посещать сайты в ночное время суток! Из-за того, что внутри расширения располагаются другие 15 расширений, я не могу выложить его в WebStore из-за всяческих лицензионных соглашений - я просто соединил все мелкие расширение во едино для экономии.</p>
-		<img alt="Black Internet" class="img-responsive" style="padding-bottom:20px!important;padding-left:460px!important;" height="284" src="img/blackext.png" width="254">
+		<img alt="Black Internet" class="img-responsive" height="284" src="img/blackext.png" width="254">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="/blackext">Перейти на сайт</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Electron-приложение "ExDesk"</h2>
 		<p class="lead">Я мечтал написать свою пародию на операционную систему и моя мечта осуществилась - после изучения HTML, CSS, JS и моему знакомству с Electron, я написал приложение, которое внешне напоминает систему! Да-да, я знаю, что никому не нравится Electron, ибо это "урезанный Chrome", но есть ли другой вариант? Пока аналогов нет или пока я не изучу что-то подходящее, увы, будет так.</p>
-		<img alt="ExDesk" class="img-responsive" height="388" style="padding-bottom:20px!important;padding-left:75px!important;" src="img/exdesk_screen.png" width="1024">
+		<img alt="ExDesk" class="img-responsive" height="388" src="img/exdesk_screen.png" width="1024">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="/exdesk">Перейти на сайт</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
@@ -43,7 +43,7 @@
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрный скин для AIMP "AIMPBlack"</h2>
 		<p class="lead">На данный проект ушло три месяца изучения всех нюансов в скин-движке и всё делалось чисто ради эксперимента. А скин получился довольно хорошим.</p>
-		<img alt="AIMPBlack" class="img-responsive" height="547" style="padding-bottom:15px!important;padding-left:370px!important;" src="img/aimpblack.png" width="407">
+		<img alt="AIMPBlack" class="img-responsive" height="547" src="img/aimpblack.png" width="407">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="/aimpblack.acs4">Скачать</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
