--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Браузерное расширение "Чёрный Интернет"</h2>
 		<p class="lead">Уже год, как я разрабатываю экспериментальное расширение, которое перекрашивает все популярно-кликабельные сайты в полностью чёрный цвет, позволяя с максимальным комфортом посещать сайты в ночное время суток! Из-за того, что внутри расширения располагаются другие 15 расширений, я не могу выложить его в WebStore из-за всяческих лицензионных соглашений - я просто соединил все мелкие расширение во едино для экономии.</p>
-		<img alt="Black Internet" class="img-responsive" height="284" src="img/blackext.png" width="254">
+		<img alt="Black Internet" class="img-responsive" src="img/blackext.png">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="/blackext">Перейти на сайт</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Electron-приложение "ExDesk"</h2>
 		<p class="lead">Я мечтал написать свою пародию на операционную систему и моя мечта осуществилась - после изучения HTML, CSS, JS и моему знакомству с Electron, я написал приложение, которое внешне напоминает систему! Да-да, я знаю, что никому не нравится Electron, ибо это "урезанный Chrome", но есть ли другой вариант? Пока аналогов нет или пока я не изучу что-то подходящее, увы, будет так.</p>
-		<img alt="ExDesk" class="img-responsive" height="388" src="img/exdesk_screen.png" width="1024">
+		<img alt="ExDesk" class="img-responsive" src="img/exdesk_screen.png">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="/exdesk">Перейти на сайт</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
@@ -50,7 +50,7 @@
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрный скин для игры в клиент osu!fx "Black!osu"</h2>
 		<p class="lead">После знакомства с клиентом популярной игры osu!fx, мне жутко понравилась полная поддержка скинов и я тут же ринулся делать полноценный чёрный скин.</p>
-		<img alt="Black!osu" class="img-responsive" height="388" src="img/blackosu.png" width="1024">
+		<img alt="Black!osu" class="img-responsive" src="img/blackosu.png">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="/blackosu">Перейти на сайт</a></p></div>
 	</div>
 </body>
