--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрные темы для Win-приложений</h2>
 		<p class="lead">Discord, Telegram, VimeWorld, Prime World - и это не предел! Я крашу в чёрный всё, что кажется мне уместным, чтобы его покрасили в чёрный!</p>
-		<img alt="BlackThemes" class="img-responsive" height="388" src="img/blackthemes.png" width="1024">
+		<img alt="BlackThemes" class="img-responsive" src="img/blackthemes.png">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="/blackthemes">Перейти на сайт</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрный скин для AIMP "AIMPBlack"</h2>
 		<p class="lead">На данный проект ушло три месяца изучения всех нюансов в скин-движке и всё делалось чисто ради эксперимента. А скин получился довольно хорошим.</p>
-		<img alt="AIMPBlack" class="img-responsive" height="547" src="img/aimpblack.png" width="407">
+		<img alt="AIMPBlack" class="img-responsive" src="img/aimpblack.png">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="/aimpblack.acs4">Скачать</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
