--- a/blacktheme/index.html
+++ b/blacktheme/index.html
@@ -36,21 +36,21 @@
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрная тема для Telegram</h2>
 		<p class="lead">В прошлом году, Телеграм разрешил перекрашивать их клиент. Я немного не понимаю, почему некоторые элементы перекрашиваются правильно, а другие - нет! Надеюсь на исправление клиента, ибо моя тема не полностью готова из-за этого. ИНСТРУКЦИЯ: просто перейдите по ссылке при запущенном Телеграме. Если не вышло, зайдите через браузер Опера с включённым VPN.</p>
-		<img alt="BlackThemes" class="img-responsive" src="../img/blackthemes.png">
+		<img alt="Telegram" class="img-responsive" src="../img/tg.png">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="tg://addtheme?slug=jNhOxUW47QCKljyH">Скачать тему</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
-		<h2 class="bs-docs-featurette-title">Чёрный скин для AIMP "AIMPBlack"</h2>
-		<p class="lead">На данный проект ушло три месяца изучения всех нюансов в скин-движке и всё делалось чисто ради эксперимента. А скин получился довольно хорошим.</p>
-		<img alt="AIMPBlack" class="img-responsive" src="../img/aimpblack.png">
+		<h2 class="bs-docs-featurette-title">Чёрная тема для VimeWorld</h2>
+		<p class="lead">Как бы вы ненавидели Майнкрафт, а она захватила миллионы детских умов своей простотой и уникальным открытым миром. Есть клиент VimeWorld. Он оказывается, имеет HTML-начинку. Я быстренько накидал кода и клиент теперь выглядит чище с моей чёрной темой!</p>
+		<img alt="VimeWorld" class="img-responsive" src="../img/vimeworld.png">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="blacktheme/">Скачать тему</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
-		<h2 class="bs-docs-featurette-title">Чёрный скин для игры в клиент osu!fx "Black!osu"</h2>
-		<p class="lead">После знакомства с клиентом популярной игры osu!fx, мне жутко понравилась полная поддержка скинов и я тут же ринулся делать полноценный чёрный скин.</p>
-		<img alt="Black!osu" class="img-responsive" src="../img/blackosu.png">
+		<h2 class="bs-docs-featurette-title">Чёрная тема для PrimeWorld</h2>
+		<p class="lead">Друг показал игру Prime World и она мне понравилась.</p>
+		<img alt="PrimeWorld" class="img-responsive" src="../img/primeworld.png">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="blacktheme/">Скачать тему</a></p></div>
 	</div>
 </body>
