--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<h2 class="bs-docs-featurette-title">Чёрные темы для Win-приложений</h2>
 		<p class="lead">Discord, Telegram, VimeWorld, Prime World - и это не предел! Я крашу в чёрный всё, что кажется мне уместным, чтобы его покрасили в чёрный!</p>
 		<img alt="BlackThemes" class="img-responsive" src="img/blackthemes.png">
-		<p class="lead"><a class="btn btn-outline btn-lg" href="/blackthemes">Перейти на сайт</a></p></div>
+		<p class="lead"><a class="btn btn-outline btn-lg" href="/blacktheme">Перейти на сайт</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
