--- a/blacktheme/index.html
+++ b/blacktheme/index.html
@@ -7,8 +7,8 @@
 	<meta content="Я ExeWire - Web-frontend разработчик, изучаю Python, планирую изучить C#. Здесь вы увидите все мои проекты, над которыми я в данный момент работаю постоянно." name="description">
 	<meta content="ExeWire" name="author">
 	<title>BlackThemes</title>
-	<link href="style.css" rel="stylesheet">
-	<link href="img/exewire.png" rel="icon" type="image/png">
+	<link href="../style.css" rel="stylesheet">
+	<link href="../img/exewire.png" rel="icon" type="image/png">
 </head>
 <body class="bs-docs-home">
 	<main class="bs-docs-masthead" id="content" tabindex="-1">
