--- a/blacktheme/index.html
+++ b/blacktheme/index.html
@@ -13,7 +13,7 @@
 <body class="bs-docs-home">
 	<main class="bs-docs-masthead" id="content" tabindex="-1">
 		<div class="container">
-			<span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"><img alt="ExeWire Logo" class="img-responsive" src="img/exewire.png"></span>
+			<span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"><img alt="ExeWire Logo" class="img-responsive" src="../img/exewire.png"></span>
 			<p class="lead">Чёрные темы для приложений.</p>
 			<p class="lead">Здесь, вы сможете скачать темы для других приложений и инструкция для их установки.</p>
 		</div>
@@ -23,14 +23,14 @@
 		<h2 class="bs-docs-featurette-title">Чёрная тема для Discord</h2>
 		<p class="lead">Когда я перешёл в Дискорд, я даже не подозревал, что есть такой плагин, как BetterDiscord для кастомизации клиента Discord. Позже, я доработал тему и предлагаю ознакомиться с ней. ИНСТРУКЦИЯ: сначала установите BetterDiscord, перейдя по кнопке. После открытия в Discord плагина, закройте Discord и зайдите в папку "AppData/Roaming/BetterDiscord/themes" и закиньте туда файл, который вы скачаете через другую кнопку.</p>
 		<img alt="Discord" class="img-responsive" src="../img/discord.png">
-		<p class="lead"><a class="btn btn-outline btn-lg" href="blacktheme/">Скачать BetterDiscord</a><a class="btn btn-outline btn-lg" href="blacktheme/">Скачать тему</a></p></div>
+		<p class="lead"><a class="btn btn-outline btn-lg" href="https://github.com/rauenzi/BetterDiscordApp/releases">Скачать BetterDiscord</a><a class="btn btn-outline btn-lg" href="BlackDiscord.theme.css">Скачать тему</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрная тема для Ripcord</h2>
 		<p class="lead">После, меня познакомили с клиентом Discord - Ripcord. Он не использует Electron и весит очень мало, 30 МБ и оперативной памяти использует столько же! Для неё также нашлась чёрная тема, которую я и написал! ИНСТРУКЦИЯ: просто закиньте файлик в корень программы. - в ту же папку, где она и располагается.</p>
 		<img alt="Ripcord" class="img-responsive" src="../img/ripcord.png">
-		<p class="lead"><a class="btn btn-outline btn-lg" href="blacktheme/custom_theme.json">Скачать тему</a></p></div>
+		<p class="lead"><a class="btn btn-outline btn-lg" href="custom_theme.json">Скачать тему</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
@@ -44,14 +44,14 @@
 		<h2 class="bs-docs-featurette-title">Чёрная тема для VimeWorld</h2>
 		<p class="lead">Как бы вы ненавидели Майнкрафт, а она захватила миллионы детских умов своей простотой и уникальным открытым миром. Есть клиент VimeWorld. Он оказывается, имеет HTML-начинку. Я быстренько накидал кода и клиент теперь выглядит чище с моей чёрной темой!</p>
 		<img alt="VimeWorld" class="img-responsive" src="../img/vimeworld.png">
-		<p class="lead"><a class="btn btn-outline btn-lg" href="blacktheme/">Скачать тему</a></p></div>
+		<p class="lead"><a class="btn btn-outline btn-lg" href="vimeworld-hacker.css">Скачать тему</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрная тема для PrimeWorld</h2>
 		<p class="lead">Друг показал игру Prime World и она мне понравилась.</p>
 		<img alt="PrimeWorld" class="img-responsive" src="../img/primeworld.png">
-		<p class="lead"><a class="btn btn-outline btn-lg" href="blacktheme/">Скачать тему</a></p></div>
+		<p class="lead"><a class="btn btn-outline btn-lg" href="black_primeworld.7z">Скачать тему</a></p></div>
 	</div>
 </body>
 </html>
