add skin for primeworld

--- a/blacktheme/index.html
+++ b/blacktheme/index.html
@@ -6,7 +6,7 @@
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<meta content="Я ExeWire - Web-frontend разработчик, изучаю Python, планирую изучить C#. Здесь вы увидите все мои проекты, над которыми я в данный момент работаю постоянно." name="description">
 	<meta content="ExeWire" name="author">
-	<title>BlackThemes</title>
+	<title>Чёрные темы</title>
 	<link href="../style.css" rel="stylesheet">
 	<link href="../img/exewire.png" rel="icon" type="image/png">
 </head>
@@ -49,7 +49,7 @@
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрная тема для PrimeWorld</h2>
-		<p class="lead">Друг показал игру Prime World и она мне понравилась.</p>
+		<p class="lead">Друг показал игру Prime World и она мне понравилась. Клиент также имеет HTML-начинку, поэтому, мне было легко перекрасить в чёрный! ИНСТРУКЦИЯ: распаковать архив и заменить папку в игре.</p>
 		<img alt="PrimeWorld" class="img-responsive" src="../img/primeworld.png">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="black_primeworld.7z">Скачать тему</a></p></div>
 	</div>
