--- a/blacktheme/index.html
+++ b/blacktheme/index.html
@@ -35,14 +35,14 @@
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрная тема для Telegram</h2>
-		<p class="lead">В прошлом году, Телеграм разрешил перекрашивать их клиент. Я немного не понимаю, почему некоторые элементы перекрашиваются правильно, а другие - нет! Надеюсь на исправление клиента, ибо моя тема не полностью готова из-за этого. ИНСТРУКЦИЯ: просто перейдите по ссылке при запущенном Телеграме. Если не вышло, зайдите через браузер Опера с включённым VPN.</p>
+		<p class="lead">В прошлом году, Телеграм разрешил перекрашивать их клиент. Я немного не понимаю, почему некоторые элементы перекрашиваются правильно, а другие - нет! Надеюсь на исправление клиента, ибо моя тема не полностью готова из-за этого. ИНСТРУКЦИЯ: просто перейдите по ссылке при запущенном Телеграме.</p>
 		<img alt="Telegram" class="img-responsive" src="../img/tg.png">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="tg://addtheme?slug=jNhOxUW47QCKljyH">Скачать тему</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрная тема для VimeWorld</h2>
-		<p class="lead">Как бы вы ненавидели Майнкрафт, а она захватила миллионы детских умов своей простотой и уникальным открытым миром. Есть клиент VimeWorld. Он оказывается, имеет HTML-начинку. Я быстренько накидал кода и клиент теперь выглядит чище с моей чёрной темой!</p>
+		<p class="lead">Как бы вы ненавидели Майнкрафт, а она захватила миллионы детских умов своей простотой и уникальным открытым миром. Есть клиент VimeWorld. Он имеет HTML-начинку. Я быстренько накидал кода и клиент теперь выглядит чище с моей чёрной темой!</p>
 		<img alt="VimeWorld" class="img-responsive" src="../img/vimeworld.png">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="vimeworld-hacker.css">Скачать тему</a></p></div>
 	</div>
