--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Electron-приложение "ExDesk"</h2>
 		<p class="lead">Я мечтал написать свою пародию на операционную систему и моя мечта осуществилась - после изучения HTML, CSS, JS и моему знакомству с Electron, я написал приложение, которое внешне напоминает систему! Да-да, я знаю, что никому не нравится Electron, ибо это "урезанный Chrome", но есть ли другой вариант? Пока аналогов нет или пока я не изучу что-то подходящее, увы, будет так.</p>
-		<img alt="ExDesk" class="img-responsive" src="img/exdesk_screen.png">
+		<img alt="ExDesk" class="img-responsive" src="img/exdesk.png">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="/exdesk">Перейти на сайт</a></p></div>
 	</div>
 	<div class="bs-docs-featurette">
