add skin blackosu

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 		<h2 class="bs-docs-featurette-title">Чёрный скин для игры в клиент osu!fx "Black!osu"</h2>
 		<p class="lead">После знакомства с клиентом популярной игры osu!fx, мне жутко понравилась полная поддержка скинов и я тут же ринулся делать полноценный чёрный скин.</p>
 		<img alt="Black!osu" class="img-responsive" src="img/blackosu.png">
-		<p class="lead"><a class="btn btn-outline btn-lg" href="/blackosu">Перейти на сайт</a></p></div>
+		<p class="lead"><a class="btn btn-outline btn-lg" href="black!osu[en].osk">EN</a></p></div>
+		<p class="lead"><a class="btn btn-outline btn-lg" href="black!osu[ru].osk">RU</a></p></div>
 	</div>
 </body>
 </html>
