cosmetic's work, lmao

--- a/blacktheme/index.html
+++ b/blacktheme/index.html
@@ -13,8 +13,8 @@
 <body class="bs-docs-home">
 	<main class="bs-docs-masthead" id="content" tabindex="-1">
 		<div class="container">
-			<span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"><img alt="ExeWire Logo" class="img-responsive" src="../img/exewire.png"></span>
-			<p class="lead">Чёрные темы для приложений.</p>
+			<span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"><img onclick="history.back(-1); return false;" alt="ExeWire Logo" class="img-responsive" src="../img/exewire.png"></span>
+			<h2 class="lead">Чёрные темы для приложений.</h2>
 			<p class="lead">Здесь, вы сможете скачать темы для других приложений и инструкция для их установки.</p>
 		</div>
 	</main>
