--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<div class="bs-docs-featurette">
 		<div class="container">
 		<h2 class="bs-docs-featurette-title">Чёрный скин для AIMP "AIMPBlack"</h2>
-		<p class="lead">На данный проект ушло три месяца изучения всех нюансов в скин-движке и всё делалось чисто ради эксперимента. А скин получился довольно хорошим.</p>
+		<p class="lead">На данный проект ушло три месяца изучения всех нюансов в скин-движке и всё делалось чисто ради эксперимента. А скин получился довольно хороший.</p>
 		<img alt="AIMPBlack" class="img-responsive" src="img/aimpblack.png">
 		<p class="lead"><a class="btn btn-outline btn-lg" href="/aimpblack.acs4">Скачать</a></p></div>
 	</div>
