--- a/exdesk/index.html
+++ b/exdesk/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+	<meta charset="utf-8">
 	<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
 	<link href="exdesk.css" rel="stylesheet" type="text/css">
@@ -11,7 +11,7 @@
 <body>
 	<header>
 		<div class="container">
-			<span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"><img href="https://exewire.github.io/" alt="ExeWire Logo" class="img-responsive" src="../img/exdesk.png"></a></span>
+			<span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline"><img onclick="history.back(-1); return false;" href="https://exewire.github.io/" alt="ExeWire Logo" class="img-responsive" src="../img/exdesk.png"></a></span>
 		</div>
 	</header>
 	<div class="hero text-center">
