--- a/blackext/updates.html
+++ b/blackext/updates.html
@@ -13,6 +13,46 @@
 		<li class="update-version row">
 			<ol class="wrapper">
 				
+				<!-- Версия 0.1.68 -->
+				<li class="update-version row">
+					<span class="updates-timeline col span-1"></span>
+					<section class="informator col span-5">
+						<header class="update-version-header">
+							<h2 class="update-version-title">Версия 0.1.68</h2>
+							<small class="heading-caption">Выпуск <time>17 февраля 2020</time></small>
+						</header>
+						<div class="lead">
+							<ol>
+								<li style="font-weight:700!important;" class="update icon-system">Расширение переехало на новый домен.</li>
+								<li><strong class="update icon-bugfixes">Изменены сайты</strong> linux.org.ru, duckduckgo.com, discordapp.com, whatsapp.com, lifehacker.com, blogs.opera.com, e.mail.ru, accounts.google.com, osu.ppy.sh, youtube.com, ag.ru, meduza.io, github.com, gitlab.com, ipleer.ru, patreon.com, tumblr.com, znaniya.com, vk.com, ezcheats.com, whatsapp.com, devianart.com, bing.com, comss.ru, beru.ru, bukkit.com, aminoapps.com, zen.yandex.ru, twitch.tv, tvrain.ru.</li>
+								<li><strong class="update icon-new">Добавлены сайты</strong> vklist.ru, chromium.woolyss.com, reddit.com, ogs.google.com.</li>
+								<li><strong class="update icon-update">Обновлены модули</strong> "myCoub".</li>
+							</ol>
+						</div>
+					</section>
+					<aside class="update-details col span-6">
+						<div class="mask">
+							<h4 id="other-features">Отчёт исправлений</h4>
+							<ul>
+								<li>[С-076] Новые зеркала у ipleer и animevost.am. Также, добавлен в список имеющихся сайтов kino.mail.ru.</li>
+								<li>[С-077] Исправлены полосы оповещений в ВК.</li>
+								<li>[С-078] Исправлен раздел YouTube Studio.</li>
+								<li>[С-079] Теперь на сайте "linux.org.ru" видны ссылки.</li>
+								<li>[С-080] Исправления после обновления в Discord.</li>
+								<li>[С-081] Добавлена бета стиля Реддит, могут быть ошибки, просьба репортить баги в мой Дискорд-канал.</li>
+								<li>[С-082] Переделана панель сервисов Google.</li>
+								<li>[Э-014] Updater оптимизирован и исправлен.</li>
+							</ul>
+							<h4 id="other-features">Известные проблемы</h4>
+							<ul>
+								<li>Если есть какие-либо проблемы с расширением, попробуйте очистить кэш. Если не помогло, проверьте работоспособность расширения на другом ПК. Если всё равно не работает, напишите разработчику в Дискорде. Ссылка будет в меню расширения.</li>
+								<li>У поисковых систем также есть чёрная тема. Если не работает - нажмите на кнопку "Разрешить доступ к результатам на странице поиска" на этой странице - opera://extensions/ .</li>
+							</ul>
+						</div>
+						</div>
+					</aside>
+				</li>
+				
 				<!-- Версия 0.1.67 -->
 				<li class="update-version row">
 					<span class="updates-timeline col span-1"></span>
